--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'jacoco'
 }
 
 repositories {
@@ -30,3 +31,14 @@ application {
     // Define the main class for the application.
     mainClass = 'io.oz.mynorj.App'
 }
+
+test {
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
+jacoco {
+    toolVersion = "0.8.7"
+}
+
